post update 기능 작업중

--- a/app/views/admin_manage_post.ejs
+++ b/app/views/admin_manage_post.ejs
@@ -38,7 +38,7 @@
                     <paper-icon-button icon="more-vert" title="more"></paper-icon-button>
                     <paper-dropdown class="dropdown" transition="" halign="right" style="padding:0px;">
                       <core-menu class="menu" >
-                        <paper-item style="margin-top:10px;margin-left:5px;margin-right:5px;"> 
+                        <paper-item style="margin-top:10px;margin-left:5px;margin-right:5px;" ng-click="editPost('<%= newPostUrl %>', post._id)"> 
                           <core-icon icon="create"></core-icon>&nbsp;Edit
                         </paper-item>
                          
