--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -11,11 +11,20 @@
       background: white;
       box-sizing: border-box;
       width: 100%;
-      height: 100px;
+      height: 200px;
       margin: 16px;
-      padding: 16px;
+      padding: 10px;
+      padding-left:16px;
+      padding-right:16px;
       border-radius: 2px;
     }
+
+    paper-fab#add-post {
+    position:fixed;
+    right: 25px;
+    bottom:25px;
+    background-color:@accentColor;
+  }
 
    
   </style>
@@ -29,8 +38,9 @@
   </core-toolbar>
   <div id="contents">
      <paper-shadow class="card" z="1">
-      <h3>My Post Title</h3>
-      <p>Some little summary</p>
+      <h3><a href="#">My Post Title title title title</a></h3>
+      <p>posted 2015-01-01</p>
+      <p>Some little summarySome little summarySome little summarySome little summarySome little summarySome little summarySome little summarySome little summary&nbsp;<span style="color:red">read more...</span></p>
     </paper-shadow>
     <paper-shadow class="card" z="1">
       z = 1
@@ -41,6 +51,10 @@
     <paper-shadow class="card" z="1">
       z = 1
     </paper-shadow>
+
+     <paper-fab id="add-post" icon="forward" class="bottom indent" title="add new post">></paper-fab>
+
+
   </div>
 </core-header-panel>
 
