--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -39,7 +39,7 @@
   <div id="contents">
      <paper-shadow class="card" z="1">
       <h3><a href="#">My Post Title title title title</a></h3>
-      <p>posted 2015-01-01</p>
+      <p>posted 2015-01-01 by admin</p>
       <p>Some little summarySome little summarySome little summarySome little summarySome little summarySome little summarySome little summarySome little summary&nbsp;<span style="color:red">read more...</span></p>
     </paper-shadow>
     <paper-shadow class="card" z="1">
@@ -51,9 +51,20 @@
     <paper-shadow class="card" z="1">
       z = 1
     </paper-shadow>
+    <div style="text-align:center">
 
-     <paper-fab id="add-post" icon="forward" class="bottom indent" title="add new post">></paper-fab>
+    <paper-button
+                
+                raised>
+               Prev
+              </paper-button>
 
+             <paper-button
+                
+                raised>
+                Next
+              </paper-button>
+    </div>
 
   </div>
 </core-header-panel>
