--- a/public/less/blog/style.less
+++ b/public/less/blog/style.less
@@ -1,7 +1,7 @@
 /** common css styles **/
 
 @import url(http://fonts.googleapis.com/css?family=Roboto);
-@import 'variables.less';
+@import './variables.less';
 
 /** to use ng-cloak **/
 
