--- a/app/views/admin_topbar.ejs
+++ b/app/views/admin_topbar.ejs
@@ -1,7 +1,7 @@
 <% if(username) { %>
-  <core-toolbar id="mainheader" class="medium-tall" ng-controller="AdminTopMenu">
+  <core-toolbar id="admin-mainheader" class="medium-tall" ng-controller="AdminTopMenu">
 <% } else { %>
-  <core-toolbar id="mainheader" ng-controller="AdminTopMenu">
+  <core-toolbar id="admin-mainheader" ng-controller="AdminTopMenu">
 <% } %>
 
   <% if (username) { %>
