--- a/public/less/admin/manage_post.less
+++ b/public/less/admin/manage_post.less
@@ -1,6 +1,6 @@
-// admin manage post page style
+/* admin manage post page style */
 
-@import 'variables.less';
+@import './variables.less';
 
 #contents {
   paper-fab#add-post {
