--- a/public/less/admin/new_post.less
+++ b/public/less/admin/new_post.less
@@ -1,6 +1,6 @@
-// new post page style
+/** new post page style **/
 
-@import 'variables.less';
+@import './variables.less';
 
 @editorColor: @dividerLightColor;
 
