--- a/public/less/blog/variables.less
+++ b/public/less/blog/variables.less
@@ -1,10 +1,10 @@
-/** variables **/
+/** blog style variables **/
 
-@primaryColor     : #3F51B5;
-@darkPrimaryColor : #303F9F;
-@lightPrimaryColor: #C5CAE9;
+@primaryColor     : #673AB7;
+@darkPrimaryColor : #512DA8;
+@lightPrimaryColor: #D1C4E9;
 @textNicon        : #FFFFFF;
-@accentColor      : #FF5252;
+@accentColor      : #448AFF;
 @primaryText      : #212121;
 @secondaryText    : #727272;
 @dividerColor     : #B6B6B6;
