--- a/app/views/blog.ejs
+++ b/app/views/blog.ejs
@@ -5,22 +5,20 @@
   <% include blog_topbar %>
 
   <div id="contents">
-     <paper-shadow class="content-box summary" z="1">
-      <h3><a href="#">My Post Title title title title</a></h3>
-      <p>posted 2015-01-01 by admin</p>
-      <p>Some little summarySome little summarySome little summarySome little summarySome little summarySome little summarySome little summarySome little summary&nbsp;<span style="color:red">read more...</span></p>
-    </paper-shadow>
-    <paper-shadow class="content-box summary" z="1">
-      z = 1
-    </paper-shadow>
-    <paper-shadow class="content-box summary" z="1">
-      z = 1
-    </paper-shadow>
-    <paper-shadow class="content-box summary" z="1">
-      z = 1
-    </paper-shadow>
-    <div style="text-align:center">
 
+    <% for(var i=0; i<posts.length; i++) {%>
+      <paper-shadow class="content-box summary" z="1">
+
+        <h3><a href="#"><%= posts[i].title %></a></h3>
+
+        <p class="date-and-autor"><core-icon icon="today" style="height:15px;width:15px;"></core-icon>&nbsp;<%= posts[i]["publish_date"] %></p>
+        
+        <p><%= posts[i].summary %>&nbsp;&nbsp;<a href="#">read more...</a></p>
+      </paper-shadow>
+       
+    <% } %>
+
+<div style="text-align:center">
     <paper-button raised>
                Prev
               </paper-button>
