--- a/public/less/blog/style.less
+++ b/public/less/blog/style.less
@@ -14,15 +14,30 @@ paper-shadow.content-box {
   background   : white;
   box-sizing   : border-box;
   width        : 100%;
-  
+
   margin       : 16px;
   padding      : 10px;
-  padding-left :16px;
-  padding-right:16px;
+  padding-left :25px;
+  padding-right:25px;
   border-radius: 2px;
+
+  .date-and-autor {
+  	color: @secondaryText;
+  	font-size:13px;
+  	font-weight:bold;
+
+    core-icon {
+      height:15px;
+      width:15px;
+    }
+  }
+}
+
+.nav-buttons {
+	margin-top:20px;
+	margin-left:10px;
 }
 
 paper-shadow.content-box.summary {
 	height: 200px;
 }
-
