--- a/public/less/style.less
+++ b/public/less/style.less
@@ -21,9 +21,10 @@ a:active, a:hover {
 }
 
 #contents {
-	max-width   :780px;
-	margin-left :auto;
-	margin-right:auto;
-	padding     :20px;
-	padding-top :40px;
+	max-width    :780px;
+	margin-left  :auto;
+	margin-right :auto;
+	padding      :20px;
+	padding-top  :40px;
+	margin-bottom: 50px;
 }
