--- a/app/views/blog_read_post.ejs
+++ b/app/views/blog_read_post.ejs
@@ -26,7 +26,7 @@
         <paper-button raised ng-click="clickBack($event)">
           GO BACK
         </paper-button>
-        <paper-button raised ng-click="clickBack($event)">
+        <paper-button raised>
           SHARE
         </paper-button>
       </div>
