--- a/app/views/blog.ejs
+++ b/app/views/blog.ejs
@@ -4,27 +4,40 @@
 
   <% include blog_topbar %>
 
-  <div id="contents">
+  <div ng-controller="Blog">
 
-    <% for(var i=0; i<posts.length; i++) {%>
-      <paper-shadow class="content-box summary" z="1">
-        <h3><a href="<%= posts[i]["post_url"] %>"><%= posts[i].title %></a></h3>
+    <div id="contents">
 
-        <p class="date-and-autor">
-          <core-icon icon="today"></core-icon>&nbsp;
-          <%= posts[i]["publish_date"] %>
-        </p>
+      <% for(var i=0; i<posts.length; i++) {%>
+        <paper-shadow class="content-box summary" z="1">
+          <h3><a href="<%= posts[i]["post_url"] %>"><%= posts[i].title %></a></h3>
 
-        <p>
-          <%= posts[i].summary %>
-          &nbsp;&nbsp;<a href="<%= posts[i]["post_url"] %>">read more...</a>
-        </p>
-      </paper-shadow>
-    <% } %>
+          <p class="date-and-autor">
+            <core-icon icon="today"></core-icon>&nbsp;
+            <%= posts[i]["publish_date"] %>
+          </p>
 
-    <div class="nav-buttons">
-      <paper-button raised>Prev</paper-button>
-      <paper-button raised>Next</paper-button>
+          <p>
+            <%= posts[i].summary %>...
+            &nbsp;<a href="<%= posts[i]["post_url"] %>">read more</a>
+          </p>
+        </paper-shadow>
+      <% } %>
+
+      <div class="nav-buttons">
+        <%if (prevUrl) { %>
+          <paper-button raised ng-click="clickPagenator('<%=prevUrl%>')">PREV</paper-button>
+        <% } else { %>
+          <paper-button raised disabled>Prev</paper-button>
+        <% } %>
+
+        <%if (nextUrl) { %>
+          <paper-button raised ng-click="clickPagenator('<%=nextUrl%>')">NEXT</paper-button>
+        <% } else { %>
+          <paper-button raised disabled>NEXT</paper-button>
+        <% } %>
+      </div>
+
     </div>
 
   </div>
