--- a/app/views/admin_setting.ejs
+++ b/app/views/admin_setting.ejs
@@ -23,7 +23,6 @@
         >
           <input name="username" is="paper-input"
             required
-            value="가나다라마"
             ng-model="formData.username"
             ng-maxlength="10"
             ng-minlength="4"
@@ -31,7 +30,7 @@
           >
         </paper-input-decorator>
 
-        <paper-dropdown-menu label="Post per page">
+        <paper-dropdown-menu label="Post per page" style="width:100%">
         <paper-dropdown class="dropdown">
           <core-menu class="menu">
             <paper-item>1</paper-item>
@@ -43,9 +42,15 @@
         </paper-dropdown>
       </paper-dropdown-menu>
 
-      <h2>Profile</h2>
-      <hr>
+      <h3>Profile</h3>
 
+      <div style="width:50%;float:left;">
+        <div style="background-color:red;width:50px;height:50px">
+        </div>
+      </div>
+
+      <div style="float:right">
+      
       <paper-input-decorator
         label="Profile photo url"
         floatingLabel
@@ -62,9 +67,13 @@
         >
       </paper-input-decorator>
 
+    </div>
+    <div style="float:clearfix">
+
       <textarea>
         Some text
       </textarea>
+    </div>
 
       </form>
 
