--- a/app/views/admin_setting.ejs
+++ b/app/views/admin_setting.ejs
@@ -5,7 +5,7 @@
   <% var activeTab = 1; %>
   <% include admin_topbar %>
 
-  <div ng-controller="AdminNewPost">
+  <div ng-controller="AdminSetting">
 
     <div id="contents">
 
@@ -44,31 +44,14 @@
 
       <h3>Profile</h3>
 
-      <div style="width:50%;float:left;">
-        <div style="background-color:red;width:50px;height:50px">
-        </div>
+      <div>
+        <img holder="holder.js/125x125/text:PHOTO"></img>
+        <paper-button class="primary" raised>CHANGE</paper-button>
+        <paper-button class="primary" raised>REMOVE</paper-button>
       </div>
 
-      <div style="float:right">
-      
-      <paper-input-decorator
-        label="Profile photo url"
-        floatingLabel
-        error="{{errorMessage(loginForm.username.$error)}}"
-        isInvalid="{{!loginForm.username.$valid && loginForm.username.$dirty}}"
-      >
-        <input name="username" is="paper-input"
-          required
-          value="가나다라마"
-          ng-model="formData.username"
-          ng-maxlength="10"
-          ng-minlength="4"
-          ng-keydown="hideGlobalValidation()"
-        >
-      </paper-input-decorator>
-
-    </div>
-    <div style="float:clearfix">
+  
+    <div>
 
       <textarea>
         Some text
@@ -84,6 +67,6 @@
   </div>
 </core-header-panel>
 
-<script src="/components/requirejs/require.js" data-main="/js/admin_new_post.js"></script>
+<script src="/components/requirejs/require.js" data-main="/js/admin_setting.js"></script>
 
 <% include footer %>
