--- a/app/views/admin_setting.ejs
+++ b/app/views/admin_setting.ejs
@@ -13,33 +13,33 @@
         <core-icon icon="settings"></core-icon>&nbsp;Blog Setting
       </div>
 
-      <form name="loginForm">
+      <form name="settingForm">
 
         <paper-input-decorator
           label="Blog Title"
           floatingLabel
-          error="{{errorMessage(loginForm.username.$error)}}"
-          isInvalid="{{!loginForm.username.$valid && loginForm.username.$dirty}}"
+          error="{{errorMessage(settingForm.blogtitle.$error)}}"
+          isInvalid="{{!settingForm.blogtitle.$valid && settingForm.blogtitle.$dirty}}"
         >
-          <input name="username" is="paper-input"
+          <input name="blogtitle" is="paper-input"
             required
-            ng-model="formData.username"
-            ng-maxlength="10"
-            ng-minlength="4"
+            ng-model="formData.blogtitle"
+            ng-maxlength="125"
+            ng-minlength="1"
             ng-keydown="hideGlobalValidation()"
           >
         </paper-input-decorator>
 
         <paper-input-decorator
-          label="Autore name"
+          label="Author name"
           floatingLabel
-          error="{{errorMessage(loginForm.username.$error)}}"
-          isInvalid="{{!loginForm.username.$valid && loginForm.username.$dirty}}"
+          error="{{errorMessage(settingForm.authorname.$error)}}"
+          isInvalid="{{!settingForm.authorname.$valid && settingForm.authorname.$dirty}}"
         >
-          <input name="username" is="paper-input"
+          <input name="authorname" is="paper-input"
             required
-            ng-model="formData.username"
-            ng-maxlength="10"
+            ng-model="formData.authorname"
+            ng-maxlength="50"
             ng-minlength="4"
             ng-keydown="hideGlobalValidation()"
           >
@@ -48,7 +48,7 @@
 
         <section>
 
-    <h4>Post per page</h4>
+          <h4 class="form-title">Post per page</h4>
 
     <paper-radio-group selected="always">
       <paper-radio-button name="always" label="1"></paper-radio-button>
@@ -64,14 +64,14 @@
       <h3>Profile</h3>
 
       <div>
-        <img holder="holder.js/125x125/text:PHOTO"></img>
+        <img holder2="holder.js/125x125/text:PHOTO"></img>
         <paper-button class="primary" raised>CHANGE</paper-button>
         <paper-button class="primary" raised>REMOVE</paper-button>
       </div>
 
 
       <paper-input-decorator
-        label="Blog Title"
+        label="Text"
         floatingLabel
         error="{{errorMessage(loginForm.username.$error)}}"
         isInvalid="{{!loginForm.username.$valid && loginForm.username.$dirty}}"
