--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width">
   <title><%-title %></title>
   <link rel="stylesheet" href="/css/style.css" shim-shadowdom>
+
+  <link rel="stylesheet" href="/css/admin.css" shim-shadowdom>
+
   <script src="/components/webcomponentsjs/webcomponents.js"></script>
   <link rel="import" href="/components/polymer/polymer.html"> 
 
