setting 페이지 작업중

--- a/app/views/admin_setting.ejs
+++ b/app/views/admin_setting.ejs
@@ -48,7 +48,7 @@
 
         <section>
 
-          <h4 class="form-title">Post per page</h4>
+          <legend>Post per page</legend>
 
           <paper-radio-group selected="one">
             <paper-radio-button name="one" label="1">
@@ -65,13 +65,17 @@
 
         </section>
 
-      <div style="margin-top:20px">
-    
-      <h3>Profile</h3>
+      <fieldset>
+
+      <legend><core-icon icon="face" style="width:20px;height:20px;line-height:20px;"></core-icon>&nbsp;Profile</legend>
 
       <div>
-        
-        <img style="width:125px;height:125px" data-holder2="holder.js/125x125/text:PHOTO"></img>
+
+        <div style="width:125px;height:125px">
+          <img holder ng-cloak data-src="holder.js/100%x100%/text:PHOTO">
+        </div>
+
+
         <paper-button class="primary" raised>CHANGE</paper-button>
         <paper-button class="primary" raised>REMOVE</paper-button>
       </div>
@@ -82,14 +86,22 @@
         required
         ng-model="formData.contents"
       >dd</textarea>
-    </div>
+
 
     </div>
+
+  </fieldset>
+
+  <div style="margin-top:30px;">
+
+
+          <paper-button class="primary" raised>SAVE</paper-button>
+          <paper-button class="secondary" raised>CANCLE</paper-button>
+
+
+  </div>
 
       </form>
-
-      <paper-button class="primary" raised>SAVE</paper-button>
-      <paper-button class="secondary" raised>CANCLE</paper-button>
 
     </div>
 
