--- a/public/less/common.less
+++ b/public/less/common.less
@@ -136,8 +136,7 @@ paper-action-dialog {
 	}
 }
 
-
-FORM section legend {
+FORM radio-group legend {
 	color: @primaryText;
 	font-weight:normal;
 	margin-top: 20px;
@@ -145,24 +144,22 @@ FORM section legend {
 }
 
 FORM fieldset {
-
 	border:0px;
-	background-color:@dividerLightColor;
-	margin-top:50px;
-}
+	margin-top:70px;
 
-FORM fieldset legend {
-	line-height:20px;
-	font-size    : 20px;
-  color        : @accentColor;
-  margin-bottom: 20px;
-  font-weight  : bold;
+	legend {
+		line-height  :20px;
+		font-size    : 20px;
+	  color        : @lightPrimaryColor;
+	  margin-bottom: 20px;
+	  font-weight  : bold;
 
-	display: block;
-        width: 100%;
-        float: left;
-        clear: both;
+		display: block;
+	  width  : 100%;
+	  float  : left;
+	  clear  : both;
 
-margin-top:-40px;
-margin-left:-15px;
+		margin-top :-40px;
+		margin-left:-15px;
+	}
 }
