setting style 수정중

--- a/app/views/admin_new_post.ejs
+++ b/app/views/admin_new_post.ejs
@@ -2,8 +2,7 @@
 
 <core-header-panel flex>
 
-  <% var activeTab = 0; %>
-  <% include admin_topbar %>
+  <%- include('admin_topbar', {activeTab: 0}) %>
 
   <div ng-controller="AdminNewPost">
 
