--- a/public/less/common.less
+++ b/public/less/common.less
@@ -10,6 +10,10 @@ a {
 
 /** polymer ui customize **/
 
+paper-button:hover{
+	background-color:@dividerLightColor;
+}
+
 // buttons
 paper-button[raised] {
   background-color: #fff;
