--- a/app/views/admin_manage_post.ejs
+++ b/app/views/admin_manage_post.ejs
@@ -1,9 +1,8 @@
 <% include header %>
 
 <core-header-panel flex>
-  
-  <% var activeTab = 0; %>
-  <% include admin_topbar %>
+
+  <%- include('admin_topbar', {activeTab: 0}) %>
 
   <div ng-controller="AdminManagePost">
 
