--- a/public/less/admin/setting.less
+++ b/public/less/admin/setting.less
@@ -23,3 +23,15 @@
 	background-color: @editorColor;
 	opacity         : 1!important;
 }
+
+.buttons {
+	margin-top:40px;
+
+	> div {
+		float:right;
+	}
+
+	paper-button[raised] {
+		width: 200px!important;
+	}
+}
